--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
               <li><i class="fas fa-user"></i> usha;2024</li>
               <li>
                 <i class="fab fa-github"></i>
-                <a href="https://github.com/ushafamily" target="_blank">
+                <a href="https://github.com/usha2489" target="_blank">
                   GitHub
                 </a>
               </li>
               <li>
                 <i class="fab fa-linkedin"></i>
                 <a
-                  href="https://www.linkedin.com/in/ushafamily/"
+                  href="linkedin.com/in/usha-rani-g-n-193936220"
                   target="_blank">
                   LinkedIn
                 </a>
